Added release date component.

--- a/TheMovieDB/src/app/movie-info-component/movie-info-component.component.html
+++ b/TheMovieDB/src/app/movie-info-component/movie-info-component.component.html
@@ -5,7 +5,9 @@
   
   <div class="generalInfo">
     <app-title [title]="Title"></app-title>
+    <app-runtime [RunTime]="RunTime"></app-runtime>
     <app-rating [rating]="Rating"></app-rating>
+    <app-release-date [releasedate]="ReleaseDate"></app-release-date>
   </div>
 
 </div>
