Added shortdescription component.

--- a/TheMovieDB/src/app/app.component.html
+++ b/TheMovieDB/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-navigation-bar></app-navigation-bar>
-<app-movie-info-component [MovieThumbnail]="url" [Title]="title" [Rating]="rating" [RunTime]="runtime" [ReleaseDate]="date"></app-movie-info-component>
+<app-movie-info-component [MovieThumbnail]="url" [Title]="title" [Rating]="rating" [RunTime]="runtime" [ReleaseDate]="date" [ShortDescription]="shortdesc"></app-movie-info-component>
 
 <app-footer-bar></app-footer-bar>
